# field-check

./: .gitignore  CLAUDE.md  DEVLOG.md  LICENSE  NOTICE  PROJECT.md  README.md  REQUIREMENTS.md  ROADMAP.md  STATE.md  pyproject.toml
.claude/: settings.json
.claude/hooks/lifecycle/: pre_compact_guidance.py
.claude/hooks/validators/: invariant_validator.py  ruff_validator.py
.github/workflows/: ci.yml  gui-build.yml  publish.yml
.planning/: 1-A-PLAN.md  1-B-PLAN.md  1-C-PLAN.md  1-UAT.md  2-A-PLAN.md  2-A-SUMMARY.md  2-B-PLAN.md  2-B-SUMMARY.md  2-UAT.md  3-A-PLAN.md  3-A-SUMMARY.md  3-B-PLAN.md  3-B-SUMMARY.md  3-CONTEXT.md  3-UAT.md  4-A-PLAN.md  4-A-SUMMARY.md  4-B-PLAN.md  4-B-SUMMARY.md  4-CONTEXT.md  4-UAT.md  5-A-PLAN.md  5-A-SUMMARY.md  5-B-PLAN.md  5-B-SUMMARY.md  5-CONTEXT.md  5-UAT.md  6-A-PLAN.md  6-A-SUMMARY.md  6-B-PLAN.md  6-B-SUMMARY.md  6-CONTEXT.md  6-UAT.md  7-A-PLAN.md  7-A-SUMMARY.md  7-B-PLAN.md  7-B-SUMMARY.md  7-C-PLAN.md  7-C-SUMMARY.md  7-CONTEXT.md  (+7 more)
.planning/intel/: conventions.json  index.json  summary.md
docs/: SPEC.md
gui/: index.html  package-lock.json  package.json  vite.config.js
gui/src/: main.js  report-renderer.js  scanner-ipc.js
gui/src/styles/: main.css
scripts/: build-sidecar.py  dev-sidecar.py
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: lib.rs  main.rs
src/field_check/: __init__.py  cli.py  config.py  pipeline.py  sidecar.py
src/field_check/cloud/: __init__.py
src/field_check/report/: __init__.py  csv_report.py  html.py  json_report.py  junit_report.py  sarif_report.py  terminal.py  terminal_content.py  utils.py
src/field_check/scanner/: __init__.py  corruption.py  dedup.py  encoding.py  inventory.py  language.py  minhash.py  mojibake.py  pii.py  pii_helpers.py  readability.py  sampling.py  semantic_dedup.py  simhash.py  text.py  text_workers.py
src/field_check/templates/: report.html
tests/: conftest.py  test_cli.py  test_config.py  test_corruption.py  test_coverage_gaps.py  test_dedup.py  test_exports.py  test_final_coverage.py  test_html_report.py  test_inventory.py  test_junit.py  test_lang_encoding.py  test_minhash.py  test_mock_deps.py  test_mojibake.py  test_pii.py  test_pii_helpers.py  test_pipeline.py  test_readability.py  test_report_utils.py  test_review_gaps.py  test_sampling.py  test_sarif.py  test_semantic_dedup.py  test_sidecar.py  test_simhash.py  test_terminal_report.py  test_text.py  test_walker.py  test_walker_extended.py
tests/integration/: __init__.py  test_sidecar_integration.py
