[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "field-check"
version = "0.1.0"
description = "Scan your document corpus and get a health report before processing."
readme = "README.md"
license = "Apache-2.0"
requires-python = ">=3.11"
authors = [
    { name = "Field", email = "hello@usefield.co" },
]
keywords = [
    "documents",
    "corpus",
    "scanner",
    "health-check",
    "pii",
    "dedup",
    "rag",
    "embedding",
    "data-preparation",
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Environment :: Console",
    "Intended Audience :: Developers",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: Apache Software License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Topic :: Text Processing :: General",
    "Topic :: Utilities",
    "Typing :: Typed",
]
dependencies = [
    "click>=8.1",
    "rich>=13.0",
    "blake3>=0.4",
    "pdfplumber>=0.10",
    "python-docx>=1.0",
    "charset-normalizer>=3.0",
    "jinja2>=3.1",
    "filetype>=1.2",
    "pyyaml>=6.0",
    "ftfy>=6.0",
]

[project.optional-dependencies]
s3 = ["boto3>=1.28"]
gcs = ["google-cloud-storage>=2.10"]
azure = ["azure-storage-blob>=12.17"]
all-cloud = [
    "boto3>=1.28",
    "google-cloud-storage>=2.10",
    "azure-storage-blob>=12.17",
]
pii-extra = ["phonenumberslite>=8.13", "python-stdnum>=1.20"]
formats = ["openpyxl>=3.1", "python-pptx>=1.0"]
fast-pdf = ["pdf-oxide>=0.3"]
lang-extra = ["fast-langdetect>=0.2"]
dev = [
    "pytest>=8.0",
    "pytest-cov>=4.0",
    "ruff>=0.4",
]

[project.scripts]
field-check = "field_check.cli:main"

[project.urls]
Homepage = "https://github.com/usefield/field-check"
Documentation = "https://github.com/usefield/field-check#readme"
Repository = "https://github.com/usefield/field-check"
Issues = "https://github.com/usefield/field-check/issues"
Field = "https://usefield.co"

[tool.hatch.build.targets.wheel]
packages = ["src/field_check"]

[tool.ruff]
target-version = "py311"
line-length = 100
src = ["src", "tests"]

[tool.ruff.lint]
select = [
    "E",      # pycodestyle errors
    "W",      # pycodestyle warnings
    "F",      # pyflakes
    "I",      # isort
    "UP",     # pyupgrade
    "B",      # flake8-bugbear
    "SIM",    # flake8-simplify
    "RUF",    # ruff-specific
]

[tool.ruff.lint.per-file-ignores]
"src/field_check/scanner/language.py" = ["RUF001", "RUF003"]
"tests/test_lang_encoding.py" = ["RUF001", "RUF003"]

[tool.ruff.lint.isort]
known-first-party = ["field_check"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-ra -q"

[tool.coverage.run]
source = ["field_check"]

[tool.coverage.report]
fail_under = 80
show_missing = true
