[package]
name = "field-check"
version = "0.1.0"
description = "Field Check — Document corpus health scanner"
authors = ["Field <hello@usefield.co>"]
edition = "2021"

[lib]
name = "field_check_lib"
crate-type = ["lib", "cdylib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-shell = "2"
tauri-plugin-dialog = "2"
tauri-plugin-fs = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
